# avcpp

./: .clang-format  .clang-tidy  .editorconfig
example/api2-samples/: CMakeLists.txt
example/fftools/: cmdutils.cpp  cmdutils.h  config.h  ffmpeg.cpp  ffmpeg.h  ffmpeg_filter.cpp  ffmpeg_hw.cpp  ffmpeg_opt.cpp  ffmpeg_videotoolbox.cpp  ffplay.cpp  ffprobe.cpp  libavutil_internal.h
example/fftools/ffplay/: Clock.cpp  Clock.h  Decoder.cpp  Decoder.h  FrameQueue.cpp  FrameQueue.h  VideoState.cpp  VideoState.h  common.cpp  common.h
example/filters/: README.md  amix-context.h  ffmpeg-amix.cpp  filter_audio.cpp  io-context.h  logger.cpp  logger.h  muxing.cpp  rtp-context.h  transcode_aac.cpp  transcoding.cpp
src/: codec.h
